--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -91,10 +91,10 @@ top: -5px;
     text-decoration: underline;
 }
 
-button{
+.button  {
     width: 100%;
-    height: 40px;
-    border-radius: 40px;
+    height: 50px;
+    border-radius:40px;
     background: #fff;
     border: none;
     outline: none;
