cambios a la tabla

--- a/src/styles/Form1.css
+++ b/src/styles/Form1.css
@@ -16,6 +16,9 @@
     justify-content: center;
     align-items: center;
     padding: 100px 10% 0;
+    /* border-collapse: separate;
+    border-spacing: 0 10px;
+    border-radius: 10px; */
 }
 
 h1 {
